--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^6.3.0",
+    "ajv": "8.17.1",
     "moviesite": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
